Terraform/compute.tf
# 1. Launch Template (EC2 Blueprint)
resource "aws_launch_template" "app_lt" {
  name_prefix   = "${var.project_name}-template-"
  image_id      = "ami-07b87c70a43b13ea1"
  instance_type = "t3.micro"

  # IAM Role for Bedrock 
  iam_instance_profile {
    name = aws_iam_instance_profile.ec2_profile.name
  }

  network_interfaces {
    associate_public_ip_address = true
    security_groups             = [aws_security_group.app_sg.id]
  }

  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "${var.project_name}-server"
    }
  }
}

# 2. Auto Scaling Group
resource "aws_autoscaling_group" "app_asg" {
  desired_capacity    = 1
  max_size            = 2
  min_size            = 1
  target_group_arns   = [aws_lb_target_group.main_tg.arn]
  vpc_zone_identifier = [aws_subnet.public_1.id, aws_subnet.public_2.id]

  # -------------------------------
  health_check_type         = "ELB"
  health_check_grace_period = 300 
  # -------------------------------

  launch_template {
    id      = aws_launch_template.app_lt.id
    version = "$Latest"
  }

  tag {
    key                 = "Name"
    value               = "${var.project_name}-asg-instance"
    propagate_at_launch = true
  }
}
