Terraform/rds.tf
# 1. Grouping Subnet for RDS
resource "aws_db_subnet_group" "rds_subnet_group" {
  name       = "${var.project_name}-rds-subnet-group"
  subnet_ids = [aws_subnet.private_1.id, aws_subnet.private_2.id]

  tags = {
    Name = "My DB private subnet group"
  }
}

# 2. Create Postgres Instance
resource "aws_db_instance" "postgres" {
  allocated_storage      = 20
  db_name                = "diary_db"
  engine                 = "postgres"
  engine_version         = "17.6"
  instance_class         = "db.t3.micro"
  username               = "noruberuto"
  password               = "Valerie123$"
  db_subnet_group_name   = aws_db_subnet_group.rds_subnet_group.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  skip_final_snapshot    = true
  publicly_accessible    = false 

  tags = {
    Name = "${var.project_name}-rds"
  }
}
